--- a/WorkHistory.html
+++ b/WorkHistory.html
@@ -141,7 +141,7 @@
 
 		<div class="topnav">
  			<a class="active" href="index.html">Home Page</a>
-  			<a href="Workhistory.html">Work Experience</a>
+  			<a href="WorkHistory.html">Work Experience</a>
  			<a href="ContactMe.html">Contact</a>
  			<a href="Aboutme.html">About Me</a>
 		</div>
