--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<body>
 		<div class="topnav">
  			<a class="active" href="Index.html">Home Page</a>
-  			<a href="Workhistory.html">Work Experience</a>
+  			<a href="WorkHistory.html">Work Experience</a>
  			<a href="ContactMe.html">Contact</a>
  			<a href="Aboutme.html">About Me</a>
 		</div>
